--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
       html {
         scroll-behavior: smooth;
         scroll-padding-top: 80px; /* Offset for fixed header */
+        overflow-x: hidden;
       }
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8fafc;
         color: #000000;
+        overflow-x: hidden;
+        width: 100%;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: 'Plus Jakarta Sans', sans-serif;
